--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html dir="ltr">
-<head>
-<meta charset="utf-8">
-<title>First Git applications</title>
-<style>
-  main{margin: 20px auto 0 auto;}
-</style>
-</head>
-<body>
-    <main>
-    <section>
-        <h1>Hello Git World</h1>
-        <article>
-        The Hello World project is a time-honored tradition in computer programming. It is a simple exercise that gets you started when learning something new. Let’s get started with GitHub!
+    <head>
+        <meta charset="utf-8">
+        <title>First Git applications</title>
+        <style>
+            main{margin: 20px auto 0 auto;}
+        </style>
+    </head>
+    <body>
+        <main>
+            <section>
+                <h1>Hello Git World</h1>
+                <article>
+                    The Hello World project is a time-honored tradition in computer programming. It is a simple exercise that gets you started when learning something new. Let’s get started with GitHub!
 
-GitHub is a platform for hosting and collaborating on projects. You don’t have to worry about losing data on your hard drive or managing a project across multiple computers — sync from anywhere. Most importantly, GitHub is a collaborative and asynchronous workflow for building software better, together.
-        </article>
-    </section>    
-    </main>
-</body>
+                    GitHub is a platform for hosting and collaborating on projects. You don’t have to worry about losing data on your hard drive or managing a project across multiple computers — sync from anywhere. Most importantly, GitHub is a collaborative and asynchronous workflow for building software better, together.
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                    </p>
+                </article>
+            </section>
+        </main>
+    </body>
 </html>
